--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </div>
         </section>
         
-<section id="casestudies" class="py-20">
+        <section id="casestudies" class="py-20">
             <h2 class="section-title" data-lang="casestudies_title">My Path: From Engineer to Educator</h2>
             <p class="section-subtitle" data-lang="casestudies_subtitle">My interest in education grew naturally from my experiences as an engineer and leader. Each step of my journey revealed a new piece of the puzzle.</p>
             <div class="mt-16 space-y-20">
@@ -224,7 +224,7 @@
                         <h3 class="text-2xl font-bold text-white" data-lang="case1_title">Chapter 1: The Foundation in Precision</h3>
                         <p class="text-sky-400 mt-1 font-semibold" data-lang="case1_role">Prototyping Technician</p>
                         <div class="mt-4 text-slate-400 space-y-2" data-lang="case1_desc">
-                            <p>My journey started with a fascination for turning ideas into reality. In the demanding automotive R&D world, I learned the non-negotiable value of precision. This purely technical role taught me that getting the details right is the foundation of any successful project.</p>
+                            <p>My journey started with a fascination for turning ideas into reality. In the demanding automotive R&D world, I learned the non-negotiable value of precision. This purely technical role taught me that <strong class="text-lg text-sky-400">getting the details right is the foundation of any successful project.</strong></p>
                         </div>
                         <div class="mt-4">
                             <span class="tech-tag">Precision Engineering</span>
@@ -233,6 +233,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="flex flex-col md:flex-row-reverse items-center gap-10">
                     <div class="md:w-1/2">
                         <img src="images/military.jpg" alt="Military Leadership" class="rounded-xl shadow-lg w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e293b/cbd5e1?text=Military';">
@@ -241,7 +242,7 @@
                         <h3 class="text-2xl font-bold text-white" data-lang="case2_title">Chapter 2: The Addition of Leadership</h3>
                         <p class="text-sky-400 mt-1 font-semibold" data-lang="case2_role">Artillery Maintenance Team Leader</p>
                         <div class="mt-4 text-slate-400 space-y-2" data-lang="case2_desc">
-                            <p>Leading a 4-technician maintenance team taught me that technical skill alone isn't enough. I had to not only solve problems but also train my team to do the same. This was my first real taste of teaching – the challenge of transferring complex knowledge clearly and effectively under pressure.</p>
+                            <p>Leading a 4-technician maintenance team taught me that technical skill alone isn't enough. I had to not only solve problems but also train my team to do the same. This was my first real taste of teaching – <strong class="text-lg text-sky-400">the challenge of transferring complex knowledge clearly and effectively under pressure.</strong></p>
                         </div>
                         <div class="mt-4">
                             <span class="tech-tag">Team Leadership</span>
@@ -259,7 +260,7 @@
                         <h3 class="text-2xl font-bold text-white" data-lang="case3_title">Chapter 3: The Spark of Education</h3>
                         <p class="text-sky-400 mt-1 font-semibold" data-lang="case3_role">University Lab Technician & Instructor</p>
                         <div class="mt-4 text-slate-400 space-y-2" data-lang="case3_desc">
-                            <p>This role was a turning point where my passion for hands-on education truly flourished. While managing a lab of over 50 machines, I took on two major educational initiatives.</p><p class="mt-2">First, I <strong>developed and taught more than 10 foundational engineering workshops</strong> to over 100 students, covering topics like SolidWorks basics, 3D printing, and building simple electronics.</p><p class="mt-2">In addition, to ensure the lab's long-term operational continuity, I <strong>produced an extensive video training library of over 20 modules</strong> for future staff, documenting everything from equipment maintenance to software procedures.</p><p class="mt-2">This, combined with leading a student team to build a robot arm and mentoring startups, solidified my passion: empowering people by building accessible, hands-on educational systems.</p>
+                            <p>This role was a turning point where my passion for hands-on education truly flourished. While managing a lab of over 50 machines, I took on two major educational initiatives.</p><p class="mt-2">First, I developed and taught more than 10 foundational engineering workshops to over 100 students, covering topics like SolidWorks basics, 3D printing, and building simple electronics.</p><p class="mt-2">In addition, to ensure the lab's long-term operational continuity, I produced an extensive video training library of over 20 modules for future staff, documenting everything from equipment maintenance to software procedures.</p><p class="mt-2">This, combined with leading a student team to build a robot arm and mentoring startups, solidified my passion: <strong class="text-lg text-sky-400">empowering people by building accessible, hands-on educational systems.</strong></p>
                         </div>
                         <div class="mt-4">
                             <span class="tech-tag">3D Printing</span>
@@ -435,18 +436,18 @@
                 casestudies_subtitle: "My interest in education grew naturally from my experiences as an engineer and leader. Each step of my journey revealed a new piece of the puzzle.",
                 case1_title: "Chapter 1: The Foundation in Precision",
                 case1_role: "Prototyping Technician",
-                case1_desc: "<p>My journey started with a fascination for turning ideas into reality. In the demanding automotive R&D world, I learned the non-negotiable value of precision. This purely technical role taught me that getting the details right is the foundation of any successful project.</p>",
+                case1_desc: `<p>My journey started with a fascination for turning ideas into reality. In the demanding automotive R&D world, I learned the non-negotiable value of precision. This purely technical role taught me that <strong class="text-lg text-sky-400">getting the details right is the foundation of any successful project.</strong></p>`,
                 case2_title: "Chapter 2: The Addition of Leadership",
                 case2_role: "Artillery Maintenance Team Leader",
-                case2_desc: "<p>Leading a 4-technician maintenance team taught me that technical skill alone isn't enough. I had to not only solve problems but also train my team to do the same. This was my first real taste of teaching – the challenge of transferring complex knowledge clearly and effectively under pressure.</p>",
+                case2_desc: `<p>Leading a 4-technician maintenance team taught me that technical skill alone isn't enough. I had to not only solve problems but also train my team to do the same. This was my first real taste of teaching – <strong class="text-lg text-sky-400">the challenge of transferring complex knowledge clearly and effectively under pressure.</strong></p>`,
                 case3_title: "Chapter 3: The Spark of Education",
                 case3_role: "University Lab Technician & Instructor",
-                case3_desc: `<p>This role was a turning point where my passion for hands-on education truly flourished. While managing a lab of over 50 machines, I took on two major educational initiatives.</p><p class="mt-2">First, I <strong>developed and taught more than 10 foundational engineering workshops</strong> to over 100 students, covering topics like SolidWorks basics, 3D printing, and building simple electronics.</p><p class="mt-2">In addition, to ensure the lab's long-term operational continuity, I <strong>produced an extensive video training library of over 20 modules</strong> for future staff, documenting everything from equipment maintenance to software procedures.</p><p class="mt-2">This, combined with leading a student team to build a robot arm and mentoring startups, solidified my passion: empowering people by building accessible, hands-on educational systems.</p>`,
+                case3_desc: `<p>This role was a turning point where my passion for hands-on education truly flourished. While managing a lab of over 50 machines, I took on two major educational initiatives.</p><p class="mt-2">First, I <strong>developed and taught more than 10 foundational engineering workshops</strong> to over 100 students, covering topics like SolidWorks basics, 3D printing, and building simple electronics.</p><p class="mt-2">In addition, to ensure the lab's long-term operational continuity, I <strong>produced an extensive video training library of over 20 modules</strong> for future staff, documenting everything from equipment maintenance to software procedures.</p><p class="mt-2">This, combined with leading a student team to build a robot arm and mentoring startups, solidified my passion: <strong class="text-lg text-sky-400">empowering people by building accessible, hands-on educational systems.</strong></p>`,
                 case3_playlist_link: "View the Training Video Library",
                 case4_title: "Chapter 4: The Confirmation",
                 case4_role: "AI Researcher at UTRGV",
                 case4_desc: `<p>As part of a USDA research project, I played a key role in the early stages of developing a honey bee monitoring system. My contributions included <strong class="text-sky-400">hardware redesign, creating a remote video recording script for data collection, labeling the collected data, and writing the initial code to train a bee detection model</strong> using TensorFlow on a Jetson Nano. This experience confirmed my ability to apply AI to solve real-world problems from the ground up.</p>`,
-                case4_link: "View the Research Project ",
+                case4_link: "View Research Project",
                 case4_paper_link: "View the Paper",
                 case5_title: "Chapter 5: The Lesson in Grassroots Operations",
                 case5_role: "Retail Store Launch Team",
@@ -454,13 +455,13 @@
                 case6_title: "Chapter 6: The Synthesis",
                 case6_role: "Founder & Developer of FinitUp",
                 case6_desc: `<p>FinitUp is my ongoing project to translate business theory into a tangible product. The goal is to <strong class="text-sky-400">automate the valuation models I learned in my MBA finance classes using AI, aiming to reduce analysis time by 90% compared to manual methods.</strong> This is my 'Learning by Building' philosophy in action, merging my entire skillset to create value.</p><p class="mt-2">I'm building upon the open-source work of the AI4Finance Foundation (FinRL, FinRobot) to implement automated analysis, recommendations, and virtual trading.</p>`,
-                case6_link_finitup: "Visit the Finitup Website",
+                case6_link_finitup: "Visit Finitup Website",
                 case6_link_github: "View on GitHub",
                 case7_title: "Chapter 7: The Current Mission",
                 case7_role: "Founder of the UTRGV AI Club",
                 case7_desc: `<p>I founded the AI Club not just to make technology accessible, but also to <strong class="text-sky-400">bridge the information gap between academic theory and industry practice that I experienced as an undergraduate.</strong> It's a community built on the belief that anyone can innovate with the right guidance and a hands-on approach—a principle I discovered through my own path from engineer to educator.</p>`,
-                case7_link: "Visit the AI Club Website ",
-                case7_youtube_link: "Visit the AI Club Youtube",
+                case7_link: "Visit AI Club Website",
+                case7_youtube_link: "Visit AI Club Youtube",
                 philosophy_title: "My Guiding Philosophy",
                 philosophy_subtitle: "Learning by Building",
                 philosophy_desc: "My philosophy isn't a theory; it's the result of my journey. I believe in learning by doing, making complex ideas simple through real-world application, and empowering others with the confidence to build their own solutions. This practical, hands-on approach guides everything I do.",
@@ -504,13 +505,13 @@
                 casestudies_subtitle: "Mi interés por la educación creció de forma natural a partir de mis experiencias como ingeniero y líder. Cada paso de mi viaje reveló una nueva pieza del rompecabezas.",
                 case1_title: "Capítulo 1: La Base en la Precisión",
                 case1_role: "Técnico de Prototipos",
-                case1_desc: "<p>Mi viaje comenzó con una fascinación por convertir ideas en realidad. En el exigente mundo de I+D automotriz, aprendí el valor innegociable de la precisión. Este rol puramente técnico me enseñó que cuidar los detalles es la base de cualquier proyecto exitoso.</p>",
+                case1_desc: `<p>Mi viaje comenzó con una fascinación por convertir ideas en realidad. En el exigente mundo de I+D automotriz, aprendí el valor innegociable de la precisión. Este rol puramente técnico me enseñó que <strong class="text-lg text-sky-400">cuidar los detalles es la base de cualquier proyecto exitoso.</strong></p>`,
                 case2_title: "Capítulo 2: La Adición del Liderazgo",
                 case2_role: "Líder del Equipo de Mantenimiento de Artillería",
-                case2_desc: "<p>Liderar un equipo de mantenimiento de 4 técnicos me enseñó que la habilidad técnica por sí sola no es suficiente. No solo tenía que resolver problemas, sino también entrenar a mi equipo para hacer lo mismo. Esta fue mi primera experiencia real con la enseñanza: el desafío de transferir conocimientos complejos de manera clara y efectiva bajo presión.</p>",
+                case2_desc: `<p>Liderar un equipo de mantenimiento de 4 técnicos me enseñó que la habilidad técnica por sí sola no es suficiente. No solo tenía que resolver problemas, sino también entrenar a mi equipo para hacer lo mismo. Esta fue mi primera experiencia real con la enseñanza: <strong class="text-lg text-sky-400">el desafío de transferir conocimientos complejos de manera clara y efectiva bajo presión.</strong></p>`,
                 case3_title: "Capítulo 3: La Chispa de la Educación",
                 case3_role: "Técnico de Laboratorio e Instructor Universitario",
-                case3_desc: `<p>Este rol fue un punto de inflexión donde mi pasión por la educación práctica realmente floreció. Mientras gestionaba un laboratorio de más de 50 máquinas, asumí dos importantes iniciativas educativas.</p><p class="mt-2">Primero, <strong>desarrollé e impartí más de 10 talleres de ingeniería fundamentales</strong> a más de 100 estudiantes, cubriendo temas como los fundamentos de SolidWorks, impresión 3D y la construcción de aparatos electrónicos simples.</p><p class="mt-2">Además, para asegurar la continuidad operativa del laboratorio a largo plazo, <strong>produje una extensa biblioteca de videos de capacitación con más de 20 módulos</strong> para el futuro personal, documentando todo, desde el mantenimiento de equipos hasta los procedimientos de software.</p><p class="mt-2">Esto, combinado con liderar un equipo de estudiantes para construir un brazo robótico y asesorar a startups, solidificó mi pasión: empoderar a las personas mediante la construcción de sistemas educativos accesibles y prácticos.</p>`,
+                case3_desc: `<p>Este rol fue un punto de inflexión donde mi pasión por la educación práctica realmente floreció. Mientras gestionaba un laboratorio de más de 50 máquinas, asumí dos importantes iniciativas educativas.</p><p class="mt-2">Primero, <strong>desarrollé e impartí más de 10 talleres de ingeniería fundamentales</strong> a más de 100 estudiantes, cubriendo temas como los fundamentos de SolidWorks, impresión 3D y la construcción de aparatos electrónicos simples.</p><p class="mt-2">Además, para asegurar la continuidad operativa del laboratorio a largo plazo, <strong>produje una extensa biblioteca de videos de capacitación con más de 20 módulos</strong> para el futuro personal, documentando todo, desde el mantenimiento de equipos hasta los procedimientos de software.</p><p class="mt-2">Esto, combinado con liderar un equipo de estudiantes para construir un brazo robótico y asesorar a startups, solidificó mi pasión: <strong class="text-lg text-sky-400">empoderar a las personas mediante la construcción de sistemas educativos accesibles y prácticos.</strong></p>`,
                 case3_playlist_link: "Ver la Biblioteca de Videos de Capacitación",
                 case4_title: "Capítulo 4: La Confirmación",
                 case4_role: "Investigador de IA en UTRGV",
@@ -573,13 +574,13 @@
                 casestudies_subtitle: "교육에 대한 저의 관심은 엔지니어이자 리더로서의 경험에서 자연스럽게 생겨났습니다. 제 여정의 각 단계는 퍼즐의 새로운 조각을 보여주었습니다.",
                 case1_title: "1장: 정밀함의 기초",
                 case1_role: "프로토타이핑 기술자",
-                case1_desc: "<p>저의 여정은 아이디어를 현실로 만드는 것에 대한 매력에서 시작되었습니다. 까다로운 자동차 R&D 세계에서 저는 정밀함이라는 타협할 수 없는 가치를 배웠습니다. 이 순수 기술직은 세부 사항을 올바르게 처리하는 것이 모든 성공적인 프로젝트의 기초라는 것을 가르쳐주었습니다.</p>",
+                case1_desc: `<p>저의 여정은 아이디어를 현실로 만드는 것에 대한 매력에서 시작되었습니다. 까다로운 자동차 R&D 세계에서 저는 정밀함이라는 타협할 수 없는 가치를 배웠습니다. 이 순수 기술직은 <strong class="text-lg text-sky-400">세부 사항을 올바르게 처리하는 것이 모든 성공적인 프로젝트의 기초라는 것</strong>을 가르쳐주었습니다.</p>`,
                 case2_title: "2장: 리더십의 추가",
                 case2_role: "포병 정비팀장",
-                case2_desc: "<p>4명의 기술자로 구성된 정비팀을 이끌면서 기술만으로는 충분하지 않다는 것을 배웠습니다. 문제를 해결할 뿐만 아니라 팀원들이 같은 일을 할 수 있도록 훈련시켜야 했습니다. 이것이 저의 첫 번째 진정한 교육 경험이었습니다. 압박감 속에서 복잡한 지식을 명확하고 효과적으로 전달하는 도전이었죠.</p>",
+                case2_desc: `<p>4명의 기술자로 구성된 정비팀을 이끌면서 기술만으로는 충분하지 않다는 것을 배웠습니다. 문제를 해결할 뿐만 아니라 팀원들이 같은 일을 할 수 있도록 훈련시켜야 했습니다. 이것이 저의 첫 번째 진정한 교육 경험이었습니다. <strong class="text-lg text-sky-400">압박감 속에서 복잡한 지식을 명확하고 효과적으로 전달하는 도전이었죠.</strong></p>`,
                 case3_title: "3장: 교육의 불꽃",
                 case3_role: "대학 실험실 기술자 및 강사",
-                case3_desc: `<p>이 역할은 직접 체험하는 교육에 대한 저의 열정이 본격적으로 꽃피게 된 전환점이었습니다. 50대 이상의 복합 장비를 관리하는 동시에, 저는 두 가지의 핵심적인 교육 활동을 이끌었습니다.</p><p class="mt-2">첫째, <strong>100명 이상의 학생들을 대상으로 10개가 넘는 기초 엔지니어링 워크숍을 직접 개발하고 가르쳤습니다.</strong> 솔리드웍스 기초, 3D 프린터 체험, 간단한 전자회로 제작(보조배터리) 등의 주제를 다루었습니다.</p><p class="mt-2">이에 더해, 연구실의 장기적인 업무 연속성을 보장하기 위해, 다음 근무자들을 위한 **20개가 넘는 방대한 기술 교육 영상 라이브러리를 제작**하여 장비 유지보수부터 소프트웨어 사용법까지 모든 노하우를 체계적으로 문서화했습니다.</p><p class="mt-2">이러한 경험들은 로봇 팔 제작 팀을 이끌고 스타트업을 멘토링했던 활동과 어우러져, 손에 잡히는 교육 시스템을 만들어 사람들을 돕고 싶다는 저의 열정을 확고하게 만들어 주었습니다.</p>`,
+                case3_desc: `<p>이 역할은 직접 체험하는 교육에 대한 저의 열정이 본격적으로 꽃피게 된 전환점이었습니다. 50대 이상의 복합 장비를 관리하는 동시에, 저는 두 가지의 핵심적인 교육 활동을 이끌었습니다.</p><p class="mt-2">첫째, <strong>100명 이상의 학생들을 대상으로 10개가 넘는 기초 엔지니어링 워크숍을 직접 개발하고 가르쳤습니다.</strong> 솔리드웍스 기초, 3D 프린터 체험, 간단한 전자회로 제작(보조배터리) 등의 주제를 다루었습니다.</p><p class="mt-2">이에 더해, 연구실의 장기적인 업무 연속성을 보장하기 위해, 다음 근무자들을 위한 **20개가 넘는 방대한 기술 교육 영상 라이브러리를 제작**하여 장비 유지보수부터 소프트웨어 사용법까지 모든 노하우를 체계적으로 문서화했습니다.</p><p class="mt-2">이러한 경험들은 로봇 팔 제작 팀을 이끌고 스타트업을 멘토링했던 활동과 어우러져, <strong class="text-lg text-sky-400">손에 잡히는 교육 시스템을 만들어 사람들을 돕고 싶다는 저의 열정을 확고하게 만들어 주었습니다.</strong></p>`,
                 case3_playlist_link: "교육 영상 라이브러리 보기",
                 case4_title: "4장: 확신",
                 case4_role: "UTRGV AI 연구원",
