--- a/index.html
+++ b/index.html
@@ -122,6 +122,23 @@
                     <div class="flex flex-col md:flex-row md:items-start border-b border-slate-700 pb-8">
                         <div class="w-full md:w-1/3 flex-shrink-0 mb-4 md:mb-0">
                             <h3 class="text-xl font-poppins font-bold text-white flex items-center">
+                                <span class="text-2xl mr-3">🛠️</span>
+                                <span data-lang="skills_cat_eng">Engineering & Prototyping</span>
+                            </h3>
+                        </div>
+                        <div class="w-full md:w-2/3">
+                            <code class="skill-tag">CAD (SolidWorks)</code>
+                            <code class="skill-tag">3D Printing & Scanning</code>
+                            <code class="skill-tag">CNC</code>
+                            <code class="skill-tag">Robotics</code>
+                            <code class="skill-tag">Drones</code>
+                            <code class="skill-tag">Embedded Systems</code>
+                            <code class="skill-tag">VR/MoCap</code>
+                        </div>
+                    </div>
+                    <div class="flex flex-col md:flex-row md:items-start border-b border-slate-700 pb-8">
+                        <div class="w-full md:w-1/3 flex-shrink-0 mb-4 md:mb-0">
+                            <h3 class="text-xl font-poppins font-bold text-white flex items-center">
                                 <span class="text-2xl mr-3">🖥️</span>
                                 <span data-lang="skills_cat_dev">Software & Development</span>
                             </h3>
@@ -149,23 +166,6 @@
                             <code class="skill-tag">PyTorch</code>
                         </div>
                     </div>
-                    <div class="flex flex-col md:flex-row md:items-start border-b border-slate-700 pb-8">
-                        <div class="w-full md:w-1/3 flex-shrink-0 mb-4 md:mb-0">
-                            <h3 class="text-xl font-poppins font-bold text-white flex items-center">
-                                <span class="text-2xl mr-3">🛠️</span>
-                                <span data-lang="skills_cat_eng">Engineering & Prototyping</span>
-                            </h3>
-                        </div>
-                        <div class="w-full md:w-2/3">
-                            <code class="skill-tag">CAD (SolidWorks)</code>
-                            <code class="skill-tag">3D Printing & Scanning</code>
-                            <code class="skill-tag">CNC</code>
-                            <code class="skill-tag">Robotics</code>
-                            <code class="skill-tag">Drones</code>
-                            <code class="skill-tag">Embedded Systems</code>
-                            <code class="skill-tag">VR/MoCap</code>
-                        </div>
-                    </div>
                     <div class="flex flex-col md:flex-row md:items-start">
                         <div class="w-full md:w-1/3 flex-shrink-0 mb-4 md:mb-0">
                             <h3 class="text-xl font-poppins font-bold text-white flex items-center">
@@ -174,8 +174,9 @@
                             </h3>
                         </div>
                         <div class="w-full md:w-2/3">
-                            <code class="skill-tag">Project Management</code>
                             <code class="skill-tag">Team Leadership</code>
+                            <code class="skill-tag">Project Management</code>
+                            <code class="skill-tag">Technical Training</code>
                             <code class="skill-tag">Process Improvement</code>
                             <code class="skill-tag">Financial Modeling</code>
                             <a href="#path-finitup"><code class="skill-tag hover:bg-sky-500 hover:text-white transition-colors cursor-pointer">AI-based Valuation (FinitUp)</code></a>
@@ -198,9 +199,9 @@
                 </div>
                 <div class="mb-10 ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
-                    <h3 class="text-lg font-semibold text-white">AI Trainer (for LLMs) <span class="text-sky-400">@ Outlier</span></h3>
+                    <h3 class="text-lg font-semibold text-white">AI Trainer (for LLMs) <span class="text-sky-400">@ Outlier (a Scale AI Company)</span></h3>
                     <time class="block mb-2 text-sm font-normal leading-none text-slate-500">Dec 2024 – Aug 2025</time>
-                    <p class="text-slate-400 text-sm" data-lang="exp_outlier">Fine-tuned large language models, focusing on creating clear and effective training data.</p>
+                    <p class="text-slate-400 text-sm" data-lang="exp_outlier">Developed high-quality training data for leading AI models from clients such as OpenAI, Meta, and GM. Focused on fine-tuning LLMs through reinforcement learning from human feedback (RLHF) to enhance model accuracy and safety.</p>
                 </div>
                 <div class="mb-10 ml-8">
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
@@ -236,7 +237,7 @@
                     <span class="absolute flex items-center justify-center w-4 h-4 bg-sky-500 rounded-full -left-2 ring-4 ring-slate-800"></span>
                     <h3 class="text-lg font-semibold text-white">Prototyping Technician <span class="text-sky-400">@ Creative Design Center</span></h3>
                     <time class="block mb-2 text-sm font-normal leading-none text-slate-500">June 2015 – June 2016</time>
-                    <p class="text-slate-400 text-sm" data-lang="exp_proto">Mastered precision engineering while collaborating with and learning from senior designers.</p>
+                    <p class="text-slate-400 text-sm" data-lang="exp_proto">Utilized SLA 3D printing to produce high-fidelity prototypes of interior/exterior components (e.g., dashboards, lamps) for Tier 1 suppliers in the Hyundai & Kia automotive supply chain. Translated complex CAD designs into tangible models, ensuring precision for critical R&D and design validation phases.</p>
                 </div>
             </div>
         </section>
@@ -473,13 +474,13 @@
                 experience_title: "Professional Experience",
                 experience_subtitle: "A timeline of my key roles and responsibilities.",
                 exp_language: "Conduct Korean language classes, designing lesson plans and creating engaging materials to foster language acquisition and cultural understanding.",
-                exp_outlier: "Fine-tuned large language models, focusing on creating clear and effective training data.",
+                exp_outlier: "Developed high-quality training data for leading AI models from clients such as OpenAI, Meta, and GM. Focused on fine-tuning LLMs through reinforcement learning from human feedback (RLHF) to enhance model accuracy and safety.",
                 exp_burlington: "Played a key role in the successful launch of a new retail location. Gained hands-on experience across all launch phases, from warehouse logistics and floor-set organization to providing bilingual customer service as a cashier, honing skills in operational efficiency and teamwork.",
                 exp_utrgv: "Mentored 300+ students in Python and ML, refining methods to make complex topics accessible.",
                 exp_lab: "Managed 50+ machines, taught 10+ student workshops, and created an extensive 20+ video training library for future staff.",
                 exp_globaled: "Supported international students by facilitating orientations and promoting cultural integration, while assisting teachers in an elementary-level English program.",
                 exp_army: "Led a 4-technician team, honing skills in process management and hands-on technical training.",
-                exp_proto: "Mastered precision engineering while collaborating with and learning from senior designers.",
+                exp_proto: "Utilized SLA 3D printing to produce high-fidelity prototypes of interior/exterior components (e.g., dashboards, lamps) for Tier 1 suppliers in the Hyundai & Kia automotive supply chain. Translated complex CAD designs into tangible models, ensuring precision for critical R&D and design validation phases.",
                 education_title: "Education",
                 casestudies_title: "My Path: From Engineer to Educator",
                 casestudies_subtitle: "My interest in education grew naturally from my experiences as an engineer and leader. Each step of my journey revealed a new piece of the puzzle.",
@@ -543,13 +544,13 @@
                 experience_title: "Experiencia Profesional",
                 experience_subtitle: "Una cronología de mis roles y responsabilidades clave.",
                 exp_language: "Imparto clases de coreano, diseñando planes de lecciones y creando materiales atractivos para fomentar la adquisición del idioma y la comprensión cultural.",
-                exp_outlier: "Afiné grandes modelos de lenguaje, centrándome en crear datos de entrenamiento claros y efectivos.",
+                exp_outlier: "Desarrollé datos de entrenamiento de alta calidad para modelos de IA líderes de clientes como OpenAI, Meta y GM. Me centré en el ajuste fino de LLMs a través del aprendizaje por refuerzo con retroalimentación humana (RLHF) para mejorar la precisión y seguridad del modelo.",
                 exp_burlington: "Desempeñé un papel clave en el exitoso lanzamiento de una nueva tienda. Adquirí experiencia práctica en todas las fases, desde logística de almacén y organización del piso de ventas hasta brindar servicio al cliente bilingüe como cajero, perfeccionando habilidades en eficiencia operativa y trabajo en equipo.",
                 exp_utrgv: "Guié a más de 300 estudiantes en Python y ML, refinando métodos para hacer accesibles temas complejos.",
                 exp_lab: "Administré más de 50 máquinas, impartí más de 10 talleres para estudiantes y creé una extensa biblioteca de videos de capacitación con más de 20 videos para el futuro personal.",
                 exp_globaled: "Apoyé a estudiantes internacionales facilitando orientaciones y promoviendo la integración cultural, mientras asistía a maestros en un programa de inglés de nivel primario.",
                 exp_army: "Lideré un equipo de 4 técnicos, perfeccionando habilidades en gestión de procesos y capacitación técnica práctica.",
-                exp_proto: "Dominé la ingeniería de precisión mientras colaboraba y aprendía de diseñadores senior.",
+                exp_proto: "Utilicé la impresión 3D SLA para producir prototipos de alta fidelidad de componentes interiores/exteriores (ej., tableros, lámparas) para proveedores de Nivel 1 en la cadena de suministro automotriz de Hyundai y Kia. Traduje diseños CAD complejos en modelos tangibles, asegurando la precisión para fases críticas de I+D y validación de diseño.",
                 education_title: "Educación",
                 casestudies_title: "Mi Camino: De Ingeniero a Educador",
                 casestudies_subtitle: "Mi interés por la educación creció de forma natural a partir de mis experiencias como ingeniero y líder. Cada paso de mi viaje reveló una nueva pieza del rompecabezas.",
@@ -613,13 +614,13 @@
                 experience_title: "주요 경력",
                 experience_subtitle: "저의 주요 역할과 책임에 대한 타임라인입니다.",
                 exp_language: "다양한 수준의 학생들을 위해 수업 계획을 설계하고, 언어 습득과 문화 이해를 돕는 매력적인 교육 자료를 개발하며 한국어 수업을 진행합니다.",
-                exp_outlier: "대규모 언어 모델을 미세 조정하며, 명확하고 효과적인 학습 데이터를 만드는 데 집중했습니다.",
+                exp_outlier: "OpenAI, Meta, GM과 같은 고객사의 주요 AI 모델을 위한 고품질 학습 데이터를 개발했습니다. 인간 피드백 기반 강화 학습(RLHF)을 통해 LLM을 미세 조정하여 모델의 정확성과 안전성을 향상시키는 데 집중했습니다.",
                 exp_burlington: "신규 매장 오픈의 성공적인 런칭에 핵심적인 역할을 수행했습니다. 물류 창고 관리, 매장 진열부터 이중 언어 고객 서비스까지 모든 단계에 직접 참여하며 운영 효율성과 팀워크 역량을 강화했습니다.",
                 exp_utrgv: "300명 이상의 학생들에게 파이썬과 머신러닝을 가르치며 복잡한 주제를 쉽게 전달하는 방법을 다듬었습니다.",
                 exp_lab: "50대 이상의 장비를 관리하고, 10개 이상의 학생 워크숍을 가르쳤으며, 미래 직원을 위해 20개 이상의 방대한 영상 교육 라이브러리를 제작했습니다.",
                 exp_globaled: "초급 영어 프로그램에서 교사를 보조하며, 오리엔테이션을 진행하고 문화 통합을 촉진하여 유학생들을 지원했습니다.",
                 exp_army: "4명의 기술자로 구성된 팀을 이끌며 프로세스 관리와 실무 기술 훈련 역량을 연마했습니다.",
-                exp_proto: "선임 디자이너들과 협력하고 배우면서 정밀 엔지니어링 기술을 마스터했습니다.",
+                exp_proto: "현대/기아 자동차 공급망 내의 1차 협력사를 위해 SLA 3D 프린팅 기술을 활용하여 내/외장 부품(예: 대시보드, 램프)의 고정밀 프로토타입을 제작했습니다. 복잡한 CAD 설계를 실제 모델로 구현하며 중요한 R&D 및 디자인 검증 단계의 정밀도를 보장했습니다.",
                 education_title: "학력",
                 casestudies_title: "나의 길: 엔지니어에서 교육자로",
                 casestudies_subtitle: "교육에 대한 저의 관심은 엔지니어이자 리더로서의 경험에서 자연스럽게 생겨났습니다. 제 여정의 각 단계는 퍼즐의 새로운 조각을 보여주었습니다.",
@@ -670,7 +671,7 @@
                 const key = el.getAttribute('data-lang');
                 if (langData[key]) {
                     // Use innerHTML for elements that might contain other HTML tags
-                    if (key.includes('_desc') || key.includes('_subtitle') || key.includes('_copy')) {
+                    if (key.includes('_desc') || key.includes('_subtitle') || key.includes('_copy') || key.startsWith('exp_')) {
                         el.innerHTML = langData[key];
                     } else {
                         // For simple text content
