--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                             <code class="skill-tag">Drones</code>
                             <code class="skill-tag">Embedded Systems</code>
                             <code class="skill-tag">VR/MoCap</code>
+                            <code class="skill-tag">Heavy Equipment Maintenance (K-9 Artillery)</code>
                         </div>
                     </div>
                     <div class="flex flex-col md:flex-row md:items-start border-b border-slate-700 pb-8">
