--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <code class="skill-tag">Drones</code>
                             <code class="skill-tag">Embedded Systems</code>
                             <code class="skill-tag">VR/MoCap</code>
-                            <code class="skill-tag">Heavy Equipment Maintenance (K-9 Artillery)</code>
+                            <a href="#path-army"><code class="skill-tag hover:bg-sky-500 hover:text-white transition-colors cursor-pointer">Heavy Equipment Maintenance (K-9 Artillery)</code></a>
                         </div>
                     </div>
                     <div class="flex flex-col md:flex-row md:items-start border-b border-slate-700 pb-8">
@@ -283,22 +283,14 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="flex flex-col md:flex-row-reverse items-center gap-10">
-                    <div class="md:w-1/2">
-                        <img src="images/military.jpg" alt="Military Leadership" class="rounded-xl shadow-lg w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e293b/cbd5e1?text=Military';">
-                    </div>
-                    <div class="md:w-1/2">
-                        <h3 class="text-2xl font-bold text-white" data-lang="case2_title">Chapter 2: The Addition of Leadership</h3>
-                        <p class="text-sky-400 mt-1 font-semibold" data-lang="case2_role">Artillery Maintenance Team Leader</p>
-                        <div class="mt-4 text-slate-400 space-y-2" data-lang="case2_desc">
-                            <p>Leading a 4-technician maintenance team taught me that technical skill alone isn't enough. I had to not only solve problems but also train my team to do the same. This was my first real taste of teaching – <strong class="text-lg text-sky-400">the challenge of transferring complex knowledge clearly and effectively under pressure.</strong></p>
+                    <div id="path-army" class="flex flex-col md:flex-row-reverse items-center gap-10">
+                        <div class="md:w-1/2">
+                            <img src="images/military.jpg" alt="Military Leadership" class="rounded-xl shadow-lg w-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e293b/cbd5e1?text=Military';">
                         </div>
-                        <div class="mt-4">
-                            <span class="tech-tag">Team Leadership</span>
-                            <span class="tech-tag">Process Management</span>
-                            <span class="tech-tag">Technical Training</span>
-                        </div>
+                        <div class="md:w-1/2">
+                            <h3 class="text-2xl font-bold text-white" data-lang="case2_title">Chapter 2: The Addition of Leadership</h3>
+                            <p class="text-sky-400 mt-1 font-semibold" data-lang="case2_role">Artillery Maintenance Team Leader</p>
+                            </div>
                     </div>
                 </div>
 
